# AML-Project-2

./: .gitignore  24555136.err  24555136.out  batch_geodesics.sh  batch_train_script.sh  geodesics_distances.pt  hpc_create_env.sh  hpc_start_env.sh  pyproject.toml  questions.txt
experiment/: discussion_of_qualitative_behavior_part_A.txt  model.pt
experiment/ensemble/: model.pt
experiment/ensemble_2/: 24549317.err  24549317.out  model.pt
experiment/ensemble_3/: 24510727.err  24510727.out  24510787.err  24510787.out  24548625.err  model.pt
experiment/ensemble_3_v2/: 24549364.err  24549364.out  24549559.err  24549559.out  24553408.err  24553408.out  model.pt
experiment/ensemble_3_v3/: 24552803.err  24552803.out  24553410.err  24553410.out  model.pt
experiment/ensemble_3_v4/: 24552807.err  24552807.out  24553411.err  24553411.out  model.pt
experiment/ensemble_3_v5/: 24552808.err  24552808.out  24553417.err  24553417.out  model.pt
experiment/ensemble_3_v6/: 24552811.err  24552811.out  24553419.err  24553419.out  model.pt
experiment/run1/: 24549740.err  24549740.out  energies.txt  model.pt
experiment/run2/: 24548326.err  24548326.out  24548625.err  model.pt  (+6 more)
logs/: Train24512474.err  Train24512547.out
project2_povl/: ensemble_vae.py  ensemble_vae2.py  main.py
src/: 24555368.err  24555368.out  24555396.err  24555396.out  24561996.err  24561996.out  analyze_cov.py  batch_geodesics.py  batch_train.py  config.py  ensemble.sh  ensemble_vae.py  geodesics.py  main.py  model.py  plot_utils.py  save_image_pairs.py  train.py  training_runs.sh  variation_eval.py
(+56 files in other folders)
